--- a/tutorials/tutorial03_rllib.ipynb
+++ b/tutorials/tutorial03_rllib.ipynb
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Scenario', 'BayBridgeScenario', 'BayBridgeTollScenario', 'BottleneckScenario', 'Figure8Scenario', 'SimpleGridScenario', 'HighwayScenario', 'LoopScenario', 'MergeScenario', 'TwoLoopsOneMergingScenario', 'MultiLoopScenario', 'MiniCityScenario']\n"
+     ]
+    }
+   ],
    "source": [
     "import flow.scenarios as scenarios\n",
     "\n",
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Env', 'AccelEnv', 'LaneChangeAccelEnv', 'LaneChangeAccelPOEnv', 'GreenWaveTestEnv', 'GreenWaveTestEnv', 'WaveAttenuationMergePOEnv', 'BottleneckEnv', 'BottleNeckAccelEnv', 'WaveAttenuationEnv', 'WaveAttenuationPOEnv', 'TrafficLightGridEnv', 'PO_TrafficLightGridEnv', 'DesiredVelocityEnv', 'TestEnv', 'BayBridgeEnv']\n"
+     ]
+    }
+   ],
    "source": [
     "import flow.envs as flowenvs\n",
     "\n",
@@ -249,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -269,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,9 +328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Not monitoring node memory since `psutil` is not installed. Install this with `pip install psutil` (or ray[debug]) to enable debugging of memory-related crashes.\n",
+      "lz4 not available, disabling sample compression. This will significantly impact RLlib performance. To install lz4, run `pip install lz4`.\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -340,9 +365,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Not updating worker name since `setproctitle` is not installed. Install this with `pip install setproctitle` (or ray[debug]) to enable monitoring of worker processes.\n",
+      "Process STDOUT and STDERR is being redirected to /tmp/ray/session_2019-07-05_14-10-56_5557/logs.\n",
+      "Waiting for redis server at 127.0.0.1:56905 to respond...\n",
+      "Waiting for redis server at 127.0.0.1:59185 to respond...\n",
+      "Starting the Plasma object store with 6.871947672999999 GB memory using /tmp.\n",
+      "\n",
+      "======================================================================\n",
+      "View the web UI at http://localhost:8889/notebooks/ray_ui.ipynb?token=db72a45522af05091b0769e90e901d5ea7bf49d3111db710\n",
+      "======================================================================\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'node_ip_address': '10.105.137.213',\n",
+       " 'object_store_addresses': ['/tmp/ray/session_2019-07-05_14-10-56_5557/sockets/plasma_store'],\n",
+       " 'raylet_socket_names': ['/tmp/ray/session_2019-07-05_14-10-56_5557/sockets/raylet'],\n",
+       " 'redis_address': '10.105.137.213:56905',\n",
+       " 'webui_url': 'http://localhost:8889/notebooks/ray_ui.ipynb?token=db72a45522af05091b0769e90e901d5ea7bf49d3111db710'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# number of parallel workers\n",
     "N_CPUS = 2\n",
@@ -366,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +474,28 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 0/2 CPUs, 0/0 GPUs\n",
+      "Unknown memory usage. Please run `pip install psutil` (or ray[debug]) to resolve)\n",
+      "\n",
+      "Created LogSyncer for /Users/apple/ray_results/training_example/PPO_WaveAttenuationPOEnv-v0_0_2019-07-05_14-10-57taz5xj13 -> \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 2/2 CPUs, 0/0 GPUs\n",
+      "Unknown memory usage. Please run `pip install psutil` (or ray[debug]) to resolve)\n",
+      "Result logdir: /Users/apple/ray_results/training_example\n",
+      "RUNNING trials:\n",
+      " - PPO_WaveAttenuationPOEnv-v0_0:\tRUNNING\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "trials = run_experiments({\n",
     "    flow_params[\"exp_tag\"]: {\n",
@@ -492,9 +569,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (flow-master)",
    "language": "python",
-   "name": "python3"
+   "name": "flow-maser"
   },
   "language_info": {
    "codemirror_mode": {
