--- a/tutorials/triangle-scenario-flow.ipynb
+++ b/tutorials/triangle-scenario-flow.ipynb
@@ -318,8 +318,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 0, return: 347.52300043885094\n",
-      "Average, std return: 347.52300043885094, 0.0\n",
+      "Round 0, return: 110.08941865844935\n",
+      "Average, std return: 110.08941865844935, 0.0\n",
       "Average, std speed: nan, nan\n"
      ]
     }
@@ -330,7 +330,8 @@
     "from flow.core.experiment import Experiment\n",
     "\n",
     "sumo_params = SumoParams(render=True,\n",
-    "                         sim_step=0.2)\n",
+    "                         sim_step=0.2,\n",
+    "                        emission_path='/Users/apple/Desktop/Berkeley/Repo/Flow/triange-data/')\n",
     "\n",
     "env_params = EnvParams(additional_params=ADDITIONAL_ENV_PARAMS)\n",
     "\n",
@@ -352,7 +353,7 @@
     "\n",
     "exp = Experiment(env)\n",
     "\n",
-    "_ = exp.run(1, 10000)\n"
+    "_ = exp.run(1, 2000, convert_to_csv=True)\n"
    ]
   },
   {
