--- a/tutorials/triangle-training.ipynb
+++ b/tutorials/triangle-training.ipynb
@@ -269,13 +269,13 @@
      "output_type": "stream",
      "text": [
       "WARNING: Not updating worker name since `setproctitle` is not installed. Install this with `pip install setproctitle` (or ray[debug]) to enable monitoring of worker processes.\n",
-      "Process STDOUT and STDERR is being redirected to /tmp/ray/session_2019-07-08_19-31-26_7664/logs.\n",
-      "Waiting for redis server at 127.0.0.1:58359 to respond...\n",
-      "Waiting for redis server at 127.0.0.1:30505 to respond...\n",
+      "Process STDOUT and STDERR is being redirected to /tmp/ray/session_2019-07-09_14-46-47_8412/logs.\n",
+      "Waiting for redis server at 127.0.0.1:20982 to respond...\n",
+      "Waiting for redis server at 127.0.0.1:63003 to respond...\n",
       "Starting the Plasma object store with 6.871947672999999 GB memory using /tmp.\n",
       "\n",
       "======================================================================\n",
-      "View the web UI at http://localhost:8889/notebooks/ray_ui.ipynb?token=dc8401365de922e4b528aac8e90f92bc5ad6bfbf35aa4366\n",
+      "View the web UI at http://localhost:8889/notebooks/ray_ui.ipynb?token=cefd933e77e28f286e49807c47b01944071638dead2abed8\n",
       "======================================================================\n",
       "\n"
      ]
@@ -283,11 +283,11 @@
     {
      "data": {
       "text/plain": [
-       "{'node_ip_address': '10.225.254.249',\n",
-       " 'object_store_addresses': ['/tmp/ray/session_2019-07-08_19-31-26_7664/sockets/plasma_store'],\n",
-       " 'raylet_socket_names': ['/tmp/ray/session_2019-07-08_19-31-26_7664/sockets/raylet'],\n",
-       " 'redis_address': '10.225.254.249:58359',\n",
-       " 'webui_url': 'http://localhost:8889/notebooks/ray_ui.ipynb?token=dc8401365de922e4b528aac8e90f92bc5ad6bfbf35aa4366'}"
+       "{'node_ip_address': '10.105.136.110',\n",
+       " 'object_store_addresses': ['/tmp/ray/session_2019-07-09_14-46-47_8412/sockets/plasma_store'],\n",
+       " 'raylet_socket_names': ['/tmp/ray/session_2019-07-09_14-46-47_8412/sockets/raylet'],\n",
+       " 'redis_address': '10.105.136.110:20982',\n",
+       " 'webui_url': 'http://localhost:8889/notebooks/ray_ui.ipynb?token=cefd933e77e28f286e49807c47b01944071638dead2abed8'}"
       ]
      },
      "execution_count": 13,
@@ -357,7 +357,7 @@
       "Resources requested: 0/2 CPUs, 0/0 GPUs\n",
       "Unknown memory usage. Please run `pip install psutil` (or ray[debug]) to resolve)\n",
       "\n",
-      "Created LogSyncer for /Users/apple/ray_results/training_triangle/PPO_AccelEnv-v0_0_2019-07-08_19-31-4439x6iz0y -> \n",
+      "Created LogSyncer for /Users/apple/ray_results/training_triangle/PPO_AccelEnv-v0_0_2019-07-09_14-46-537stuc6se -> \n",
       "== Status ==\n",
       "Using FIFO scheduling algorithm.\n",
       "Resources requested: 2/2 CPUs, 0/0 GPUs\n",
@@ -374,7 +374,7 @@
       "    result = ray.get(trial_future[0])\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/worker.py\", line 2386, in get\n",
       "    raise value\n",
-      "ray.worker.RayTaskError: \u001b[36mray_worker\u001b[39m (pid=7686, host=Rayyans-MacBook-Pro.local)\n",
+      "ray.worker.RayTaskError: \u001b[36mray_worker\u001b[39m (pid=8426, host=calvisitor-10-105-136-110.calvisitor.1918.berkeley.edu)\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/rllib/agents/agent.py\", line 279, in train\n",
       "    result = Trainable.train(self)\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/tune/trainable.py\", line 146, in train\n",
@@ -385,7 +385,7 @@
       "    self.num_envs_per_worker, self.train_batch_size)\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/rllib/optimizers/rollout.py\", line 28, in collect_samples\n",
       "    next_sample = ray.get(fut_sample)\n",
-      "ray.worker.RayTaskError: \u001b[36mray_worker\u001b[39m (pid=7685, host=Rayyans-MacBook-Pro.local)\n",
+      "ray.worker.RayTaskError: \u001b[36mray_worker\u001b[39m (pid=8427, host=calvisitor-10-105-136-110.calvisitor.1918.berkeley.edu)\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/rllib/evaluation/policy_evaluator.py\", line 368, in sample\n",
       "    batches = [self.input_reader.next()]\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/rllib/offline/input_reader.py\", line 25, in next\n",
@@ -400,12 +400,19 @@
       "    self.rs.push(x)\n",
       "  File \"/anaconda3/envs/flow-master/lib/python3.5/site-packages/ray/rllib/utils/filter.py\", line 86, in push\n",
       "    x.shape, self._M.shape, x))\n",
-      "ValueError: Unexpected input shape (6,), expected (2,), value = [1.96316269e-04 3.33333333e-01 3.33333333e-01 2.87029746e-02\n",
-      " 1.55555556e-03 3.03703704e-03]\n",
+      "ValueError: Unexpected input shape (6,), expected (2,), value = [ 0.00600938  0.33333333  0.33333333 -0.09694022  0.00155556  0.00303704]\n",
       "\n",
       "\n",
-      "Worker ip unknown, skipping log sync for /Users/apple/ray_results/training_triangle/PPO_AccelEnv-v0_0_2019-07-08_19-31-4439x6iz0y\n",
-      "Attempting to recover trial state from last checkpoint.\n"
+      "Worker ip unknown, skipping log sync for /Users/apple/ray_results/training_triangle/PPO_AccelEnv-v0_0_2019-07-09_14-46-537stuc6se\n",
+      "Attempting to recover trial state from last checkpoint.\n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 2/2 CPUs, 0/0 GPUs\n",
+      "Unknown memory usage. Please run `pip install psutil` (or ray[debug]) to resolve)\n",
+      "Result logdir: /Users/apple/ray_results/training_triangle\n",
+      "RUNNING trials:\n",
+      " - PPO_AccelEnv-v0_0:\tRUNNING, 1 failures: /Users/apple/ray_results/training_triangle/PPO_AccelEnv-v0_0_2019-07-09_14-46-537stuc6se/error_2019-07-09_14-47-09.txt\n",
+      "\n"
      ]
     }
    ],
